refactor(backend): drop Redis reserved/blocked seat mirror, harden access grants
The sentinel/seeding/reconciliation mirror wasn't worth its
drift-risk and complexity just to save one DB read per click -
addSeatToCart checks Postgres directly again for RESERVED/BLOCKED,
Redis goes back to only tracking cart holds/pending state.

Also: access grants now self-heal from Postgres on expiry instead of
forcing a full resync, enforce the user's seat quota against active
cart holds (not just at final checkout), and the TTL buffer is
configurable.